add styles for logo

--- a/styles.css
+++ b/styles.css
@@ -17,7 +17,29 @@ body, h1 {
 .name {
   font-family: 'Courier New', Courier, monospace;
   width: 100%;
+  height: 50px;
   background-color: white;
   text-align: center;
   position: fixed;
+}
+
+.logo {
+  position: fixed;
+  top: 0;
+  right: 0;
+  width: 100px;
+  height: 50px;
+  background-image: url(./assetes/GU_CV_vo.png);
+  background-size: 100px;
+  background-position-y: center;
+}
+
+.logo:hover {
+  background-image: url(./assetes/GU_CV_by.png);
+}
+
+@media screen and (max-width: 520px) {
+  .logo {
+    top: 50px;
+  }
 }
