--- a/styles.css
+++ b/styles.css
@@ -2,9 +2,6 @@
   margin: 0;
   box-sizing: border-box;
 }
-html {
-  text-align: center;
-}
 body, h1 {
   margin: 0;
 }
@@ -14,6 +11,9 @@ body, h1 {
   margin-top: 100px;
   transition: width 500ms;
 } 
+figure {
+  text-align: center;
+}
 .main-img:hover {
   width: 400px;
 } 
@@ -36,6 +36,7 @@ body, h1 {
   background-image: url(./assetes/GU_CV_vo.png);
   background-size: 100px;
   background-position-y: center;
+  text-align: center;
 }
 
 .logo:hover {
