--- a/styles.css
+++ b/styles.css
@@ -2,24 +2,17 @@
   margin: 0;
   box-sizing: border-box;
 }
-body, h1 {
-  margin: 0;
-}
 .main-img {
   width: 300px;
   border: 1px solid black;
   margin-top: 100px;
-  transition: width 500ms;
-} 
-figure {
-  text-align: center;
+  transition: width 500ms; 
+  margin-left: 150px;
 }
 .main-img:hover {
   width: 400px;
 } 
-
 .name {
-  font-family: 'Courier New', Courier, monospace;
   width: 100%;
   height: 50px;
   background-color: white;
@@ -58,10 +51,31 @@ figure {
   } 
 }
 
-h2, p, pre {
-  font-family: 'Courier New', Courier, monospace;
+main, footer {
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 pre {
   color: palevioletred;
-  width: auto;
+  background-color: black;
+  display: block;
+  width: 472px;
+  margin: 0;
+
+}
+footer {
+  text-align: center;
+  border-top: 1px solid black;
+}
+.gmail-photo {
+  width: 20px;
+  padding-top: 10px;
+}
+a {
+  color: black;
+}
+.my-gmail {
+  padding-bottom: 9px;
+}
+h2 {
+  margin-left: 100px;
 }
