--- a/styles.css
+++ b/styles.css
@@ -5,9 +5,9 @@
 .main-img {
   width: 300px;
   border: 1px solid black;
-  margin-top: 100px;
+  /* margin-top: 100px;
+  margin-left: 150px; */
   transition: width 500ms; 
-  margin-left: 150px;
 }
 .main-img:hover {
   width: 400px;
@@ -50,31 +50,32 @@
     width: 300px;
   } 
 }
+main {
+  margin-top: 50px;
+}
 
 main, footer {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 pre {
-  color: palevioletred;
-  background-color: black;
+  color: rgb(255, 67, 67);
+  background-color: rgb(146, 255, 146);
   display: block;
   width: 472px;
   margin: 0;
-
+  border: 3px solid  rgb(255, 67, 67);
 }
 footer {
-  text-align: center;
   border-top: 1px solid black;
+  text-align: center;
+  margin-left: 25px;
+  margin-right: 25px;
 }
 .gmail-photo {
   width: 20px;
-  padding-top: 10px;
 }
 a {
   color: black;
-}
-.my-gmail {
-  padding-bottom: 9px;
 }
 h2 {
   margin-left: 100px;
