--- a/styles.css
+++ b/styles.css
@@ -2,21 +2,25 @@
   margin: 0;
   box-sizing: border-box;
 }
+h1 {
+  font-family:  -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
 .main-img {
   width: 300px;
-  border: 1px solid black;
-  transition: width 500ms; 
-  left: 20px;
+  border: 1px dashed black;
+  /* transition: width 500ms;  */
+  margin-left: 25px;
 }
-.main-img:hover {
+/* .main-img:hover {
   width: 400px;
-} 
+}  */
 .name {
   width: 100%;
   height: 50px;
   background-color: white;
   text-align: center;
   position: fixed;
+  background-color: ;
 }
 
 .logo {
@@ -69,6 +73,9 @@ footer {
   text-align: center;
   margin-left: 25px;
   margin-right: 25px;
+  margin-top: 5px;
+  padding-top: 5px;
+  padding-bottom: 5px;
 }
 .gmail-photo {
   width: 20px;
@@ -77,12 +84,18 @@ a {
   color: black;
 }
 h2 {
-  margin-left: 100px;
-}
-.about-me {
-  
+  background-color: rgb(255, 180, 180);
+  width: fit-content;
+  padding: 0 8px;
 }
 .row {
   display: flex;
   justify-content: space-around;
+  /* background-color: rgb(248, 145, 197); */
+}
+.about-me {
+  margin-top: 45px;
+}
+h2, p, pre, ul {
+  margin-left: 100px;
 }
