--- a/styles.css
+++ b/styles.css
@@ -42,16 +42,12 @@ h1 {
   .logo {
     top: 50px;
   }
-}
-
-@media screen and (max-width: 520px) {
   .main-img {
     transition: none;
+    text-align: center;
   }
-  .main-img:hover {
-    width: 300px;
-  } 
 }
+
 main {
   margin-top: 50px;
 }
@@ -90,7 +86,6 @@ h2 {
 .row {
   display: flex;
   justify-content: space-around;
-  /* background-color: rgb(248, 145, 197); */
 }
 .about-me {
   margin-top: 45px;
